# slce

./: CMakeLists.txt  Jenkinsfile  LICENSE  README.md
include/: CMakeLists.txt
include/slce/: slce.hpp
test/: CMakeLists.txt  slce.cpp
